--- a/task-1-basics/mongo.yml
+++ b/task-1-basics/mongo.yml
@@ -23,6 +23,13 @@ spec:
       containers:
       - name: mongodb
         image: mongo:5.0
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
         ports:
         - containerPort: 27017
         env:
@@ -50,3 +57,5 @@ spec:
   - protocol: TCP
     port: 27017
     targetPort: 27017
+
+---
